--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ section h2 {
 }
 
 .project {
-    background: #9DC08B;
+    background: #deefd4;
     padding: 15px;
     margin: 10px 0;
     border-left: 5px solid #40513B;
